@@ -586,7 +586,7 @@ public class TaskPanel extends JPanel {
           dlg.chkEndDate.setSelected(false);
         else
           dlg.chkEndDate.setSelected(true);
-        dlg.progress.setValue(new Integer(t.getProgress()));
+        dlg.progress.setValue(Integer.valueOf(t.getProgress()));
         dlg.chkEndDate_actionPerformed(null);	
         dlg.setVisible(true);
         if (dlg.CANCELLED)
@@ -831,9 +831,7 @@ public class TaskPanel extends JPanel {
         //taskTable.updateUI();
     }
 
-    void listSubTasks_actionPerformed(ActionEvent e) {
-        String parentTaskId = taskTable.getModel().getValueAt(taskTable.getSelectedRow(), TaskTable.TASK_ID).toString();
-        
+    void listSubTasks_actionPerformed(ActionEvent e) {        
         //XXX taskTable.setCurrentRootTask(parentTaskId); 
 		taskTable.tableChanged();
 
@@ -925,7 +923,7 @@ public class TaskPanel extends JPanel {
 	void toggleShowActiveOnly_actionPerformed(ActionEvent e) {
 		Context.put(
 			"SHOW_ACTIVE_TASKS_ONLY",
-			new Boolean(ppShowActiveOnlyChB.isSelected()));
+			Boolean.valueOf(ppShowActiveOnlyChB.isSelected()));
 		taskTable.tableChanged();
 		
 	}
